--- a/biblio.bib
+++ b/biblio.bib
@@ -341,3 +341,34 @@ URL = {http://www.mdpi.com/2072-4292/7/9/12356},
 ISSN = {2072-4292},
 DOI = {10.3390/rs70912356}
 }
+
+@article{reynolds1995robust,
+  title={Robust text-independent speaker identification using Gaussian mixture speaker models},
+  author={Reynolds, Douglas A and Rose, Richard C},
+  journal={IEEE transactions on speech and audio processing},
+  volume={3},
+  number={1},
+  pages={72--83},
+  year={1995},
+  publisher={IEEE}
+}
+
+@article{hathaway1985constrained,
+  title={A constrained formulation of maximum-likelihood estimation for normal mixture distributions},
+  author={Hathaway, Richard J},
+  journal={The Annals of Statistics},
+  pages={795--800},
+  year={1985},
+  publisher={JSTOR}
+}
+
+@article{jensen2008regression,
+  title={Regression approaches to small sample inverse covariance matrix estimation for hyperspectral image classification},
+  author={Jensen, Are C and Berge, Asbj{\o}rn and Solberg, Anne Schistad},
+  journal={IEEE Transactions on Geoscience and Remote Sensing},
+  volume={46},
+  number={10},
+  pages={2814--2822},
+  year={2008},
+  publisher={IEEE}
+}
