--- a/biblio.bib
+++ b/biblio.bib
@@ -226,7 +226,7 @@
 }
 
 @article{christophe2011remote,
-  title={Remote sensing processing: From multicore to GPU},
+  title={Remote sensing processing: From multicore to {GPU}},
   author={Christophe, Emmanuel and Michel, Julien and Inglada, Jordi},
   journal={IEEE Journal of Selected Topics in Applied Earth Observations and Remote Sensing},
   volume={4},
@@ -373,3 +373,9 @@ DOI = {10.3390/rs70912356}
   publisher={IEEE}
 }
 
+@article{powers2011evaluation,
+  title={Evaluation: from precision, recall and F-measure to ROC, informedness, markedness and correlation},
+  author={Powers, David Martin},
+  year={2011},
+  publisher={Bioinfo Publications}
+}
