--- a/biblio.bib
+++ b/biblio.bib
@@ -377,5 +377,7 @@ DOI = {10.3390/rs70912356}
   title={Evaluation: from precision, recall and F-measure to ROC, informedness, markedness and correlation},
   author={Powers, David Martin},
   year={2011},
-  publisher={Bioinfo Publications}
+  journal = {Journal of Machine Learning Technologies},
+  publisher={Bioinfo Publications},
+  volume={2}
 }
