--- a/biblio.bib
+++ b/biblio.bib
@@ -381,3 +381,14 @@ DOI = {10.3390/rs70912356}
   publisher={Bioinfo Publications},
   volume={2}
 }
+
+@book{opac-b1097517,
+   title = "Methods of information geometry",
+   author = "Amari, Shun-ichi and Nagaoka, Hiroshi and Harada, Daishi",
+   series = "Translations of mathematical monographs",
+   publisher = "Providence, R.I. American Mathematical Society Oxford (Oxford University Press)",
+   url = "http://opac.inria.fr/record=b1097517",
+   isbn = "0-8218-0531-2",
+   note = "Traduit du japonais : (Jōhō kika no hōhō), édité par Iwanami Shoten en 1993",
+   year = 2000
+}
